# pyscroll

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
apps/demo/: demo-stitched.py  demo.py  stitched.world  stitched1.tmx  stitched2.tmx  stitched4.tmx  stitched5.tmx  translate.py
apps/tutorial/: quest.py
apps/tutorial/data/: grasslands.tmx  readme.md
docs/: Makefile  conf.py  index.rst  make.bat  pyscroll.rst
docs/_build/doctrees/: environment.pickle  index.doctree  pyscroll.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pyscroll.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: index.txt  pyscroll.txt
interactive_tests/: animated.tmx  translate.py  water.tsx
interactive_tests/unittests/: test_pyscroll.py
mason/: __init__.py  animation.py  compat.py  data.py  group.py  quadtree.py  rect.py
mason/bond/: isometric.py  orthographic.py
mason/platform/: graphics.py  graphics_pygame.py  graphics_pysdl2cffi.py
pyscroll/: __init__.py  animation.py  base.py  common.py  compat.py  data.py  data.pyx  group.py  isometric.py  isometric.pyx  orthographic.py  orthographic.pyx  pyscroll-threaded.py  pyscroll.py  quadtree.py  rect.py  renderer.py  texture.py  util.py
tests/: demo-2x.py  demo.py  demo_pygame.py  demo_pysdl2.py  desert.tmx  show.py
tests/pyscroll/: test_data.py  test_isometric.py  test_pyscroll.py  test_pyscroll_group.py  test_quadtree.py
tests/unittests/: test_pyscroll.py
tutorial/: quest.py
tutorial/code/: credits  quest.py  quest_pygame.py  quest_pysdl2.py
tutorial/code/data/: desert.tmx  grasslands.tmx  readme.md
tutorial/data/: water.tsx
